tests/should-pass/adaptors/swap.fk
-- #desc Swap some instances via adaptor
-- #return [pair false false, pair false false, pair false true, pair true false, pair true true]

data Pair X Y = pair X Y

interface BChoice = choose: Bool

fixTrue: {<BChoice>X -> X}
fixTrue x = x
fixTrue <choose -> k> = fixTrue (k true)

fixFalse: {<BChoice>X -> X}
fixFalse x = x
fixFalse <choose -> k> = fixFalse (k false)

prog: {[BChoice, BChoice]Pair Bool Bool}
prog! = pair (choose!) (<-BChoice.0> choose!)

ff: {Pair Bool Bool}
ff! = fixTrue (fixFalse (fixTrue (fixFalse (<1.BChoice.2> prog!))))

ff': {Pair Bool Bool}
ff'! = fixTrue (fixFalse (fixTrue (fixFalse (<2.BChoice.1> prog!))))

ft: {Pair Bool Bool}
ft! = fixTrue (fixFalse (fixTrue (fixFalse prog!)))

tf: {Pair Bool Bool}
tf! = fixTrue (fixFalse (fixTrue (fixFalse (<0.BChoice.1> prog!))))

tt: {Pair Bool Bool}
tt! = fixTrue (fixFalse (fixTrue (fixFalse (<0.BChoice.3> prog!))))

main: {List (Pair Bool Bool)}
main! = [ff!, ff'!, ft!, tf!, tt!]
