tests/should-fail/adaptors/copy.fk
-- #desc Copy an instance that is not there
-- #return Adaptor BChoice --4--> ([0,1,2,3,4],4) is not a valid adaptor in ambient [£ | BChoice , BChoice , BChoice , BChoice] (line 20 , column 46)

data Pair X Y = pair X Y

interface BChoice = choose: Bool

fixTrue: {<BChoice>X -> X}
fixTrue x = x
fixTrue <choose -> k> = fixTrue (k true)

fixFalse: {<BChoice>X -> X}
fixFalse x = x
fixFalse <choose -> k> = fixFalse (k false)

prog: {[BChoice, BChoice]Pair Bool Bool}
prog! = pair (choose!) (<-BChoice.0> choose!)

ff: {Pair Bool Bool}
ff! = fixTrue (fixFalse (fixTrue (fixFalse (<+BChoice.4> prog!))))

main: {Unit}
main! = unit
